MilestoneRFA_CM01/src/objects/CM_RFA__c.object
<CustomObject>
    <description>Commercial RFA承認申請用のオブジェクト</description>
    <fields>
        <fullName>After_BAPC__c</fullName>
        <label>BAPC（実施後）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>After_Direct_Profit__c</fullName>
        <label>直接利益（実施後）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_NSR__c</fullName>
        <label>NSR（実施後）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_Operating_Profit__c</fullName>
        <label>営業利益（実施後）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssumedRisks__c</fullName>
        <label>想定されるリスク</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Before_BAPC__c</fullName>
        <label>BAPC（実施前）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Before_Direct_profit__c</fullName>
        <label>直接利益（実施前）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Before_NSR__c</fullName>
        <label>NSR（実施前）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Before_Operating_Profit__c</fullName>
        <label>営業利益（実施前）</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Addition_Work_Request_FA__c</fullName>
        <description>c.附帯工事申請 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_Addition_Work_Request__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>c.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Addition_Work_Request__c</fullName>
        <label>c.附帯工事申請</label>
        <picklist>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_CirculationDate__c</fullName>
        <label>回覧日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Close_Reason__c</fullName>
        <label>取下げ理由</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_CompletionDate__c</fullName>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CM_Contract_Unit_Price_FinalAppBy__c</fullName>
        <description>1.契約単価 最終承認者</description>
        <formula>IF( Not(ISPICKVAL(CM_Contract_Unit_Price__c,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Contract_Unit_Price__c</fullName>
        <label>1.契約単価</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>標準卸売価格および、標準卸売価格を上回る設定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁対象外</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCS取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>登録の削除</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_CostCenterName__c</fullName>
        <description>Cost Center Name</description>
        <formula>CM_Cost_Center_Number__r.Function__c &amp; &quot; / &quot; &amp; CM_Cost_Center_Number__r.Cost_Center_Name__c 
+BR()+
CM_Cost_Center_Number__r.Function_En__c &amp; &quot; / &quot; &amp; CM_Cost_Center_Number__r.Cost_Center_Name_En__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>原価センター名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Cost_Center_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cost Center No.</description>
        <label>原価センターコード</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipName>Commercial_RFA_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Customer_Code__c</fullName>
        <description>Customer Code</description>
        <formula>CM_Customer_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>カスタマーコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Name</description>
        <label>カスタマー名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commercial_RFA_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Dealer_Code__c</fullName>
        <formula>CM_Dealer_Name__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ディーラーコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ディーラー名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commercial_RFA_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_Parts_Request_FA__c</fullName>
        <description>b.機材部品申請 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_Equipment_Parts_Request__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>b.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_Parts_Request__c</fullName>
        <description>Equipment parts request</description>
        <label>b.機材部品申請</label>
        <picklist>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Fixed_FinalAppBy__c</fullName>
        <description>5.FSｺﾐｯｼｮﾝ（固定） 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_FS_Commission_Fixed__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Fixed__c</fullName>
        <label>5.FSｺﾐｯｼｮﾝ（固定）</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>▼</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_change_FinalAppBy__c</fullName>
        <description>4.FSｺﾐｯｼｮﾝ（変動）最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_FS_Commission_change__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_change__c</fullName>
        <label>4.FSｺﾐｯｼｮﾝ（変動）</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FS_Price_FinalAppBy__c</fullName>
        <description>3.FS販売価格 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_FS_Price__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Price__c</fullName>
        <label>3.FS販売価格</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FinalApprovalBy__c</fullName>
        <description>全体の最終承認者</description>
        <formula>CM_Contract_Unit_Price_FinalAppBy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_KeyMoney_Spot_FinalAppBy__c</fullName>
        <description>キーマネー/スポット 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_KeyMoney_Spot__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>6.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_KeyMoney_Spot__c</fullName>
        <label>6.キーマネー/スポット</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>１件総額 5,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 3,500万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 2,500万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 1,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   300万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   300万円以下</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   100万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   100万円以下</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Legal_Entity__c</fullName>
        <label>所属会社名</label>
        <picklist>
            <picklistValues>
                <fullName>【CCEJ】コカ・コーライーストジャパン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CCCJ】コカ・コーラ セントラル ジャパン株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【FVCe】エフ・ヴィセントラル株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CJL】セントラルジャパンロジスティクス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CJT】セントラルジャパンテクノサービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Mikuni】三国コカ・コーラボトリング株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MFD】三国フーズ株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MLO】三国ロジスティクスオペレーション株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MVS】三国自販機サービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MSE】三国サービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MWI】三国ワイン株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Tokyo】東京コカ・コーラボトリング株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【FVS】フレッシュ・ベンダーサービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【WEX】WEX Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MMN】マシン・メンテナンス・ネットワーク株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【UVX】アーバンベンディックスネットワーク株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Tone】利根コカ・コーラボトリング株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【EXS】Ex - サービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TLS】利根物流サービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TVS】利根自動販売機サービス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TXC】TX キャンパス株式会社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CCEJP】コカ・コーラ イースト ジャパン プロダクツ株式会社</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Other_Sponsors_FinalAppBy__c</fullName>
        <description>8.その他協賛 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_Other_Sponsors__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Other_Sponsors__c</fullName>
        <label>8.その他協賛</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>１件総額 2,500万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 1,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   100万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額    10万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額    10万円以下</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_OtherCost_FinalAppBy__c</fullName>
        <description>9.プロモーション/その他費用 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_Promotion_OtherCost__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_OtherCost__c</fullName>
        <label>9.プロモーション/その他費用</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>１件総額 1,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   750万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   500万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   100万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額    25万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額    25万円以下</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額    10万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額    10万円以下</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_SampleSponsorship_FA__c</fullName>
        <formula>IF( Not(ISPICKVAL( CM_Promotion_SampleSponsorship_Sampling__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>10.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Promotion_SampleSponsorship_Sampling__c</fullName>
        <description>Promotion (sample sponsorship / sampling)</description>
        <label>10.プロモーション（サンプル協賛/サンプリング）</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>１件 50ケース以下かつ１件総額10万円以下</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件 50ケース超または１件総額10万円超</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_RequestTitle__c</fullName>
        <label>案件名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Request_Adoption_OutsideModel_FA__c</fullName>
        <description>a.採用外機種の申請 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_Request_Adoption_OutsideModel__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>a.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Request_Adoption_OutsideModel__c</fullName>
        <description>Request adoption outside the model</description>
        <label>a.採用外機種の申請</label>
        <picklist>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Requester__c</fullName>
        <formula>CreatedBy.LastName &amp; &quot; &quot; &amp; CreatedBy.FirstName &amp; &quot;, &quot; &amp; 
TEXT( YEAR(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; 
TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;/&quot; &amp; 
TEXT( DAY(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申請者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_ReturnReason__c</fullName>
        <label>差し戻し理由</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_Sale_PromotioDiscount_FinalAppBy__c</fullName>
        <description>2.特売/プロモーション値引き 最終承認者</description>
        <formula>IF(Not(IsPickval( CM_Sale_PromotioDiscount__c , &quot;&quot;)), &quot;BCFDKAM/Suzuki Ichiro&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Sale_PromotioDiscount__c</fullName>
        <label>2.特売/プロモーション値引き</label>
        <picklist>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>標準卸売価格および、標準卸売価格を上回る設定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁対象外</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCS取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>登録の削除</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Sales_Equipment_Lease_Request_FA__c</fullName>
        <description>d.販売機材のリース取引 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_Sales_Equipment_Lease_Request__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>d.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Sales_Equipment_Lease_Request__c</fullName>
        <description>Sale equipment lease transaction request</description>
        <label>d.販売機材のリース取引</label>
        <picklist>
            <picklistValues>
                <fullName>決裁区分A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>決裁区分C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Stage__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Circulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Requester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_TrackRecordDeferredRebate_FinalAppBy__c</fullName>
        <description>7.実績後払いリベート 最終承認者</description>
        <formula>IF( Not(ISPICKVAL( CM_TrackRecordDeferredRebate__c ,&quot;&quot;)), &quot;BCSKAMD/Yanonaka Kenichi&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>7.最終承認者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_TrackRecordDeferredRebate__c</fullName>
        <description>Track record deferred rebate</description>
        <label>7.実績後払いリベート</label>
        <picklist>
            <controllingField>COA_Category__c</controllingField>
            <picklistValues>
                <fullName>１件総額 5,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 4,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 3,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 1,500万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額 1,000万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   500万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   500万円以下</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   100万円超</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>１件総額   100万円以下</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COA_Category__c</fullName>
        <description>B.顧客取引条件の承認 項目</description>
        <label>COAカテゴリー</label>
        <picklist>
            <picklistValues>
                <fullName>1.フィールドセールスオペレーション統括部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.CSセールス営業統括部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.フードサービス営業統括部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.酒屋KAM開発部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.法人営業＆市場開発統括部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.広域営業法人統括部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.販売機材運営基準の承認</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can__c</fullName>
        <label>缶</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cooler__c</fullName>
        <label>クーラー</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cup__c</fullName>
        <label>カップ</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_BAPC__c</fullName>
        <formula>After_BAPC__c - Before_BAPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAPC（差）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_Direct_Profit__c</fullName>
        <formula>After_Direct_Profit__c - Before_Direct_profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>直接利益（差）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference_NSR__c</fullName>
        <formula>After_NSR__c - Before_NSR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NSR（差）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Difference_Operating_Profit__c</fullName>
        <formula>After_Operating_Profit__c -  Before_Operating_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業利益（差）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dispenser__c</fullName>
        <label>ディスペンサー</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>その他備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives_Rationale_Background__c</fullName>
        <label>目的/根拠/背景</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OhterEquipment__c</fullName>
        <label>その他機材</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherVM__c</fullName>
        <label>その他VM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OviewView__c</fullName>
        <label>概要</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>支払い形態</label>
        <picklist>
            <picklistValues>
                <fullName>現金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>掛売り</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_COA_Category__c</fullName>
        <label>主要COAカテゴリー</label>
        <picklist>
            <picklistValues>
                <fullName>A.価格方針の承認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.顧客取引条件の承認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.全社ﾌﾟﾛﾓｰｼｮﾝ価格の承認及び、M&amp;CL起案の販売促進費の承認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.ｸﾚｼﾞｯﾄﾎﾟﾘｼｰ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesForm__c</fullName>
        <label>販売形態</label>
        <picklist>
            <picklistValues>
                <fullName>ﾚｷﾞｭﾗｰ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ﾃﾞｨｽﾍﾟﾝｻｰ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ﾌﾙｻｰﾋﾞｽ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOACategory__c</fullName>
        <label>第２ COAカテゴリー</label>
        <picklist>
            <picklistValues>
                <fullName>B.顧客取引条件の承認</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory2__c</fullName>
        <label>第２ COA下位カテゴリー２</label>
        <picklist>
            <picklistValues>
                <fullName>機材の設置/撤収申請/交換</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>採用外機種の申請</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>機材部品申請</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>附帯工事申請</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材のリース取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>機器整備申請</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材の除却申請</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOASubCategory__c</fullName>
        <label>第２ COA下位カテゴリー１</label>
        <picklist>
            <picklistValues>
                <fullName>7.販売機材運営基準の承認</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CM-RFA承認申請</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CM_RequestTitle__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>RFA#-{00000000}</displayFormat>
        <label>起案No.</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>RecordType1_7</fullName>
        <active>true</active>
        <description>1.フィールドセールスオペレーション統括部およびベンディング統括部の顧客との取引契約の承認+7.販売機材運営基準の承認</description>
        <label>1.フィールドセールスオペレーション統括部およびベンディング統括部</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2_7</fullName>
        <active>true</active>
        <description>2.CSセールス営業統括部+7.販売機材運営基準の承認</description>
        <label>2.CSセールス営業統括部</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType3_7</fullName>
        <active>true</active>
        <description>3.フードサービス営業統括部+7.販売機材運営基準の承認</description>
        <label>3.フードサービス営業統括部</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType4_7</fullName>
        <active>true</active>
        <description>4.酒屋KAM開発部の顧客+7.販売機材運営基準の承認</description>
        <label>4.酒屋KAM開発部の顧客</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType5_7</fullName>
        <active>true</active>
        <description>5.法人営業＆市場開発統括部+7.販売機材運営基準の承認</description>
        <label>5.法人営業＆市場開発統括部</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType6_7</fullName>
        <active>true</active>
        <description>6.広域営業法人統括部+7.販売機材運営基準の承認</description>
        <label>6.広域営業法人統括部</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeA_C_D</fullName>
        <active>true</active>
        <description>上記以外の承認申請</description>
        <label>A,C,D承認申請</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>